# phoenix-seat-manager-v1

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
examples/phoenix-seat-manager-actions/: Cargo.toml
examples/phoenix-seat-manager-actions/src/: main.rs
sdk/: .solitarc.js  index.js  package.json
sdk/idl/: phoenix_seat_manager.json
src/: instruction.rs  instruction_builders.rs  lib.rs  loaders.rs  seat_manager.rs  shank_structs.rs
src/processor/: change_market_fee_recipient.rs  change_market_status.rs  change_seat_manager_authority.rs  claim_market_authority.rs  claim_seat.rs  confirm_renounce_seat_manager_authority.rs  designated_market_maker.rs  evict_seat.rs  mod.rs  name_market_authority_successor.rs
tests/: test_add_remove_mm.rs  test_change_market_fee_recipient.rs  test_change_market_status.rs  test_claim_market_authority.rs  test_claim_seat.rs  test_claim_seat_manager_authority.rs  test_confirm_renounce_seat_manager_authority.rs  test_evict_seat.rs  test_name_market_authority_successor.rs  test_name_seat_manager_successor.rs  test_seat_manager.rs
tests/setup/: helpers.rs  init.rs  mod.rs
