[package]
name = "phoenix-seat-manager-actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellipsis-client = "0.1.17"
solana-client = "1.10.32"
solana-sdk = "1.10.32"
phoenix-seat-manager = { path = "../../" }
tokio = { version = "1.8.4", features = ["full"] }
shellexpand = "2.1.2"
bytemuck = "=1.13.0"
phoenix-v1 = "0.1.4"
phoenix-sdk = { git = "https://github.com/Ellipsis-Labs/phoenix-sdk", branch = "master" }
devnet-token-faucet = { git = "https://github.com/Ellipsis-Labs/devnet-token-faucet" }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] } 